# cwa4

./: .gitignore  README.md  pyproject.toml
data/: 各縣市存活測站.json  各縣市所有測站.json
data/Gamit_Globk/: 0498.cwb.igb08.pos  0499.cwb.igb08.pos  0500.cwb.igb08.pos  0747.cwb.igb08.pos  0748.cwb.igb08.pos  0749.cwb.igb08.pos  0750.cwb.igb08.pos  0751.cwb.igb08.pos  1200.cwb.igb08.pos  1211.cwb.igb08.pos  8118.cwb.igb08.pos  8P5K.cwb.igb08.pos  AIRA.cwb.igb08.pos  AKND.cwb.igb08.pos  ALIC.cwb.igb08.pos  ALIS.cwb.igb08.pos  ANBU.cwb.igb08.pos  ANES.cwb.igb08.pos  ANK2.cwb.igb08.pos  ANKN.cwb.igb08.pos  ASPA.cwb.igb08.pos  AUCK.cwb.igb08.pos  BALN.cwb.igb08.pos  BANC.cwb.igb08.pos  BANP.cwb.igb08.pos  BDES.cwb.igb08.pos  BEG2.cwb.igb08.pos  BEGN.cwb.igb08.pos  BIMO.cwb.igb08.pos  BJFS.cwb.igb08.pos  (+600 more)
notebooks/: Check MinGRU.ipynb  Check Pfile.ipynb  Count.ipynb  Dataset.ipynb  產生訓練資料.ipynb  讀取訓練資料.ipynb
reports/: m3_pdf_comparison.md  m3_summary.md  m3_table2_centers.csv  m3_table3_single_station.csv  m3_table4_neighbor_effect.csv  m3_table5_m4_models.csv  m4_pdf_comparison.md  m4_table10_test_auc_grid.csv  m4_table6_pos_ratio.csv  m4_table7_train_auc.csv  m4_table7_train_auc_per_seed.csv  m4_table8_test_auc.csv  m4_table8_test_auc_per_seed.csv  m4_table9_10_per_seed.csv  m4_table9_train_auc_grid.csv
scripts/: 1_convert_gnss_format.py  2_convert_pfile_format.py  3_create_datasets.py  4_train_model.py  m3_collect_tables.py  m3_train_all.py  m4_eval.py  m4_plot_data.py  m4_run_exp1.py  m4_run_exp2.py  m4_train.py  train_model.py
tests/: test_losses.py  test_method4_pos_ratio.py
(+25 files in other folders)
