[project]
name = "cwa4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "torch==2.7.0",
    "numpy>=2.0",
    "geopandas>=1.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
    "pyarrow>=17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

# RTX 50-series (Blackwell, sm_120) needs CUDA 12.8 wheels.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
